parameterise more of config.xml

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 TODO
-- setup several configs big/mac/...
-- update config.xml with british tech specifics
+- site specific images/logos in config - copy them across or just include them all...
 - logos...
 - use correct/live feed
 - submit to Samsung...
