--- a/README
+++ b/README
@@ -1,5 +1,2 @@
 TODO
-- site specific images/logos in config - copy them across or just include them all...
-- logos...
-- use correct/live feed
-- submit to Samsung...
+- see if Samsung approves it...
