--- a/README
+++ b/README
@@ -1,2 +1,9 @@
+This app is largely the Samsung sample video player Smart TV app with a few tweaks:
+- its a middleman based template for several apps, covering various channels on British Tech Network - http://www.britishtechnetwork.com/
+- the variations are handled by alternate data configs in the data directory, eg data/mac and data/photo.
+- the SITE variable controls which site is built.  The default is the mac one. To build an other, do:
+    SITE=photo middleman build
+- see the directories in the data directory for the available sites.
+
 TODO
 - see if Samsung approves it...
